--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -14,14 +14,33 @@
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="/style.css">
   </head>
-  <body id="body" class="dark-mode">
+  <body>
     {% include 'header.liquid' %}
     <main>
       {{ content }}
     </main>
     {% include 'footer.liquid' %}
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        let table = new DataTable('#example');
+      });
+    </script>
+    <script>
+      const navEl = document.querySelector('.navbar');
+
+      window.addEventListener('scroll', () => {
+        if (window.scrollY >= 56) {
+          navEl.classList.add('navbar-scrolled');
+        } else if (window.scrollY < 56) {
+          navEl.classList.remove('navbar-scrolled')
+        }
+      });
+    </script>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
