--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -1,10 +1,10 @@
 <footer class="site-footer">
   <img
     class="logo"
-    src="/assets/img/csuci-logo.png"
-    width="70"
-    height="40"
-    alt="">
+    src="/assets/img/ci-logo-white-ii.png"
+    width="120"
+    height="75"
+    alt="CI Logo Version 2">
   <br>
   <p>© 2023 CSUCI. All rights reserved.</p>
 </footer>
