--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,14 +1,14 @@
 <header class="page-header">
   <div class="container">
     <div class="page-header__content">
-      <nav class="navbar navbar-expand-lg bg-primary navbar-light py-3 fixed-top" style="background-color: #e3f2fd;">
+      <nav class="navbar navbar-expand-lg navbar-dark py-3 fixed-top">
         <div class="container">
           <a href="/" class="navbar-brand">
             <img
-              src="/assets/img/csuci-logo.png"
+              src="/assets/img/ci-logo-white.png"
               alt="CSUCI Logo"
-              width="70"
-              height="40">
+              width="150"
+              height="25">
           </a>
 
           <button
@@ -25,7 +25,7 @@
                 <a href="/" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="/games_list/" class="nav-link">Games</a>
+                <a href="/games/" class="nav-link">Games</a>
               </li>
               <li class="nav-item">
                 <a href="/blog/" class="nav-link">Blog</a>
