--- a/src/blog.liquid
+++ b/src/blog.liquid
@@ -2,21 +2,24 @@
 title: Blog
 layout: 'base.liquid'
 ---
-
+<section class="landing">
   <div class="section container">
     <h1 class="section-title">Recent articles</h1>
-    
-      <ul role="list" class="articles__list flow">
 
-  {%- for post in collections.post -%}
-    <li>
-      <article class="snippet">
-        <img src="{{ post.data.image }}" alt="test image" class="snippet image">
-      <h3 class="snippet__title">{{ post.data.title }}</h3>
-      </article>
-    </li>
-  {%- endfor -%}
+    <ul role="list" class="articles__list flow">
 
-      </ul>
+      {%- for post in collections.post -%}
+        <li>
+          <article class="snippet">
+            <img
+              src="{{ post.data.image }}"
+              alt="test image"
+              class="snippet image">
+            <h3 class="snippet__title">{{ post.data.title }}</h3>
+          </article>
+        </li>
+      {%- endfor -%}
+
+    </ul>
   </div>
-</main>
+</section>
