--- a/src/index.liquid
+++ b/src/index.liquid
@@ -2,47 +2,120 @@
 title: CSUCI Online Game Showcase
 layout: 'base.liquid'
 ---
-<section class="hero">
-  <div class="container flow">
-    <div class="hero__content flow">
-      <h1 class="section-title">News</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      <p>Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-      <div class="flex-group">
-        <a class="frame-btn" href="#featured-articles">
-          <span class="frame-btn__outline frame-btn__outline--tall">
-            <span class="frame-btn__line frame-btn__line--tall"></span>
-            <span class="frame-btn__line frame-btn__line--flat"></span>
-          </span>
-          <span class="frame-btn__outline frame-btn__outline--flat">
-            <span class="frame-btn__line frame-btn__line--tall"></span>
-            <span class="frame-btn__line frame-btn__line--flat"></span>
-          </span>
-          <span class="frame-btn__solid"></span>
-          <span class="frame-btn__text">Featured Articles</span>
-        </a>
-        <a class="frame-btn" href="/blog/">
-          <span class="frame-btn__outline frame-btn__outline--tall">
-            <span class="frame-btn__line frame-btn__line--tall"></span>
-            <span class="frame-btn__line frame-btn__line--flat"></span>
-          </span>
-          <span class="frame-btn__outline frame-btn__outline--flat">
-            <span class="frame-btn__line frame-btn__line--tall"></span>
-            <span class="frame-btn__line frame-btn__line--flat"></span>
-          </span>
-          <span class="frame-btn__solid"></span>
-          <span class="frame-btn__text">Most Recent Articles</span>
-        </a>
+<div
+  class="carousel slide"
+  data-bs-ride="carousel"
+  id="carouselExampleIndicators">
+  <div class="carousel-indicators">
+    <button
+      aria-label="Slide 1"
+      class="active"
+      data-bs-slide-to="0"
+      data-bs-target="#carouselExampleIndicators"
+      type="button"></button>
+    <button
+      aria-label="Slide 2"
+      data-bs-slide-to="1"
+      data-bs-target="#carouselExampleIndicators"
+      type="button"></button>
+    <button
+      aria-label="Slide 3"
+      data-bs-slide-to="2"
+      data-bs-target="#carouselExampleIndicators"
+      type="button"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img
+        alt="..."
+        class="c-img"
+        src="/assets/img/landscape-1.jpg">
+      <div class="carousel-caption">
+        <h5>Welcome</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+        <p>
+          <a class="frame-btn" href="#featured-articles">
+            <span class="frame-btn__outline frame-btn__outline--tall">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__outline frame-btn__outline--flat">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__solid"></span>
+            <span class="frame-btn__text">Featured Articles</span>
+          </a>
+        </p>
       </div>
     </div>
-    <div>
+    <div class="carousel-item">
       <img
-        src="/assets/img/landscape-2.jpg"
-        alt=""
-        class="hero__image">
+        alt="..."
+        class="c-img"
+        src="/assets/img/digital.jpg">
+      <div class="carousel-caption">
+        <h5>News & Blog</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+        <p>
+          <a class="frame-btn" href="#">
+            <span class="frame-btn__outline frame-btn__outline--tall">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__outline frame-btn__outline--flat">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__solid"></span>
+            <span class="frame-btn__text">Learn More</span>
+          </a>
+        </p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img
+        alt="..."
+        class="c-img"
+        src="/assets/img/laptop.jpg">
+      <div class="carousel-caption">
+        <h5>Games</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+        <p>
+          <a class="frame-btn" href="#">
+            <span class="frame-btn__outline frame-btn__outline--tall">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__outline frame-btn__outline--flat">
+              <span class="frame-btn__line frame-btn__line--tall"></span>
+              <span class="frame-btn__line frame-btn__line--flat"></span>
+            </span>
+            <span class="frame-btn__solid"></span>
+            <span class="frame-btn__text">Learn More</span>
+          </a>
+        </p>
+      </div>
     </div>
   </div>
-</section>
+  <button
+    class="carousel-control-prev"
+    data-bs-slide="prev"
+    data-bs-target="#carouselExampleIndicators"
+    type="button">
+    <span aria-hidden="true" class="carousel-control-prev-icon"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    data-bs-slide="next"
+    data-bs-target="#carouselExampleIndicators"
+    type="button">
+    <span aria-hidden="true" class="carousel-control-next-icon"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
 
 <section id="featured-articles" class="featured-articles">
   <div class="container flow">
@@ -64,7 +137,7 @@ layout: 'base.liquid'
             <span>Apr 30, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/first-article/" class="btn btn--primary">Continue Reading</a>
+          <a href="/blog/first-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -82,7 +155,7 @@ layout: 'base.liquid'
             <span>May 14, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/second-article/" class="btn btn--primary">Continue Reading</a>
+          <a href="/blog/second-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -100,7 +173,7 @@ layout: 'base.liquid'
             <span>May 27, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/third-article/" class="btn btn--primary">Continue Reading</a>
+          <a href="/blog/third-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -118,7 +191,7 @@ layout: 'base.liquid'
             <span>Jun 14, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/fourth-article/" class="btn btn--primary">Continue Reading</a>
+          <a href="/blog/fourth-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
       <li>
@@ -136,7 +209,7 @@ layout: 'base.liquid'
             <span>Jun 14, 2023</span>
           </p>
           <p class="snippet__body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusantium sit illo neque rem omnis quaerat, nam similique vitae delectus ad magni vel quo maxime, magnam placeat. Reprehenderit, distinctio aliquam?</p>
-          <a href="/blog/fifth-article/" class="btn btn--primary">Continue Reading</a>
+          <a href="/blog/fifth-article/" class="gradient-btn">Continue Reading</a>
         </article>
       </li>
     </ul>
