--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+ @import url('https://fonts.googleapis.com/css2?family=Quattrocento&display=swap');
+
 :root {
   --fs-300: 0.9375rem;
   --fs-400: 1.0625rem;
@@ -118,7 +120,7 @@ select {
 body {
   font-family: var(--ff-body);
   font-size: var(--fs-400);
-  color: var(--clr-neutral-900);
+  color: #fff;
 }
 
 
@@ -184,16 +186,12 @@ section,
   /////////////////////// */
 
 .page-header {
-  padding: 2em 0;
+  padding: 0em 0;
 }
 
 .page-header__content {
   display: flex;
   justify-content: space-between;
-}
-
-.navbar{
-  background-color: var(--clr-primary-200) !important;
 }
 
 .nav-list {
@@ -202,14 +200,21 @@ section,
 }
 
 .nav-list a {
-  color: var(--clr-neutral-900);
+  color: var(--clr-neutral-100);
   text-decoration: none;
 }
 
 .nav-list a:focus,
 .nav-list a:hover {
-  color: var(--clr-primary-400);
+  color: var(--clr-primary-200);
   text-decoration: underline;
+}
+
+.navbar {
+  transition: all 0.5s;
+}
+.navbar-scrolled {
+  background-color: var(--clr-neutral-900);;
 }
 
  .logo {
@@ -234,28 +239,78 @@ section,
   Homepage
   /////////////////////// */
 
-.hero > div {
-  display: grid;
-  grid-auto-flow: row;
-  grid-auto-columns: 1fr;
-  align-items: center;
-  gap: 3em;
-}
+  
+/*Carousel*/
 
-.hero__image {
+.carousel-item {
+  height: 100vh;
+  min-height: 300px;
+}
+.carousel-caption {
+  bottom: 220px;
+  z-index: 2;
+}
+.carousel-caption h5 {
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
+  font-family: 'Quattrocento', serif;
+}
+.carousel-caption p {
+  width: 60%;
+  margin: auto;
+  font-size: 18px;
+  line-height: 1.9;
+}
+.carousel-inner:before {
+  content: '';
+  position: absolute;
   width: 100%;
-  /* max-height: max(15rem, 40vh); */
-  object-fit: cover;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
 
-@media (min-width: 45em) {
-  .hero > div {
-    grid-auto-flow: column;
+.c-img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+}
+
+@media only screen and (min-width: 45em) and (max-width: 991px) {
+  .carousel-caption {
+    bottom: 370px;
+  }
+  .carousel-caption p {
+    width: 100%;
+  }
+  .img {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .carousel-caption {
+    bottom: 125px;
+  }
+  .carousel-caption h5 {
+    font-size: 17px;
+  }
+  .carousel-caption a {
+    padding: 20px 15px;
+    font-size: 10px;
+  }
+  .carousel-caption p {
+    width: 100%;
+    line-height: 1.6;
+    font-size: 12px;
   }
 }
 
 .featured-articles {
-  background-color: var(--clr-primary-200);
+  background-color: var(--clr-neutral-900);
 }
 
 .articles__list {
@@ -307,7 +362,7 @@ section,
 }
 
 .snippet__meta span {
-  color: var(--clr-neutral-900);
+  color: #fff;
 }
 
 .snippet .btn {
@@ -315,7 +370,7 @@ section,
 }
 
 .snippet__title {
-  color: var(--clr-neutral-900);
+  color: #fff;
   font-size: var(--fs-500);
 }
 
@@ -342,52 +397,13 @@ section,
   }
 }
 
-.btn {
-  cursor: pointer;
-  text-decoration: none;
-  display: inline-block;
-  line-height: 1;
-  padding: 0.75em 1.75em;
-  border-radius: 0.25em;
-  align-self: start;
-  justify-self: start;
-}
-
-.btn:focus {
-  outline: 0.125em solid var(--clr-primary-400);
-  outline-offset: 0.25em;
-}
-
-.btn--primary {
-  background: var(--clr-primary-400);
-  color: var(--clr-neutral-100);
-  font-weight: var(--fw-700);
-  border: 2px solid var(--clr-primary-400);
-}
-.btn--primary:hover,
-.btn--primary:focus {
-  background: var(--clr-primary-500);
-  border-color: var(--clr-primary-500); 
-}
-
-.btn--neutral {
-  background-color: var(--clr-neutral-100);
-  color: var(--clr-neutral-900);
-  font-weight: var(--fw-700);
-  border: 2px solid var(--clr-neutral-900);
-}
-
-.btn--neutral:hover,
-.btn--neutral:focus {
-  color: var(--clr-neutral-100);
-  background-color: var(--clr-neutral-900);
-}
+/* ////Buttons///// */
 
 .gradient-btn {
   display: inline-block;
   padding: 1em 2em;
   border-radius: 0;
-  color: var(--clr-primary-500);
+  color: var(--clr-neutral-100);
   margin-top: 2rem;
   font-weight: bold;
   font-size: 0.678rem;
@@ -402,35 +418,43 @@ section,
   align-self: start;
   justify-self: start;
 }
+
 .gradient-btn:hover {
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
 .gradient-btn:hover {
   color: white;
   color: #fff;
   background-position: 99% 50%;
 }
 
+
 .frame-btn {
-  margin-top: 10px;
+  margin-top: 50px;
   line-height: 10px;
   display: inline-block;
   padding: 25px 20px;
   font-size: 10px;
   letter-spacing: 3px;
   text-decoration: none;
+  align-self: start;
+  justify-self: start;
   position: relative;
 }
+
 .frame-btn__text {
-  color: var(--clr-primary-500);;
+  color: #fff;
   font-weight: bold;
   text-transform: uppercase;
   transition: 300ms ease;
   position: relative;
 }
+
 .frame-btn:hover .frame-btn__text {
   color: white;
 }
+
 .frame-btn__solid {
   position: absolute;
   top: 0;
@@ -444,25 +468,30 @@ section,
   opacity: 0;
   transition: 500ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
 .frame-btn:hover .frame-btn__solid {
   opacity: 1;
   transform: scale(1);
 }
+
 .frame-btn__outline {
   position: absolute;
   top: 0;
   left: 0;
 }
+
 .frame-btn__outline--tall {
   margin: 0 5px;
   width: calc(100% - (5px * 2));
   height: 100%;
 }
+
 .frame-btn__outline--flat {
   margin: 5px 0;
   height: calc(100% - (5px * 2));
   width: 100%;
 }
+
 .frame-btn__line {
   width: 100%;
   height: 100%;
@@ -470,42 +499,53 @@ section,
   left: 0;
   top: 0;
 }
+
 .frame-btn__line--tall:before, .frame-btn__line--tall:after {
   height: 100%;
   width: 1px;
   top: 0;
 }
+
 .frame-btn:hover .frame-btn__outline--flat .frame-btn__line--tall:before, .frame-btn:hover .frame-btn__outline--flat .frame-btn__line--tall:after {
   transform: scaleY(0);
 }
+
 .frame-btn:hover .frame-btn__outline--tall .frame-btn__line--tall:before, .frame-btn:hover .frame-btn__outline--tall .frame-btn__line--tall:after {
   margin: 5px 0;
   height: calc(100% - (5px * 2));
 }
+
 .frame-btn__line--tall:before {
   left: 0;
 }
+
 .frame-btn__line--tall:after {
   right: 0;
 }
+
 .frame-btn__line--flat:before, .frame-btn__line--flat:after {
   width: 100%;
   height: 1px;
   left: 0;
 }
+
 .frame-btn:hover .frame-btn__outline--tall .frame-btn__line--flat:before, .frame-btn:hover .frame-btn__outline--tall .frame-btn__line--flat:after {
   transform: scaleX(0);
 }
+
 .frame-btn:hover .frame-btn__outline--flat .frame-btn__line--flat:before, .frame-btn:hover .frame-btn__outline--flat .frame-btn__line--flat:after {
   margin: 0 5px;
   width: calc(100% - (5px * 2));
 }
+
 .frame-btn__line--flat:before {
   top: 0;
 }
+
 .frame-btn__line--flat:after {
   bottom: 0;
 }
+
 .frame-btn__line:before, .frame-btn__line:after {
   content: "";
   display: block;
@@ -513,10 +553,33 @@ section,
   background-color: var(--clr-primary-500);
   transition: 800ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
 .frame-btn:hover .frame-btn__line:before, .frame-btn:hover .frame-btn__line:after {
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+/*Game Landing*/
+
+.landing {
+  background-color: var(--clr-neutral-900);
+  color: #fff !important;
+}
+
+.select {
+  color: #fff;
+}
+
+.list {
+  margin-top: 12rem;
+  margin-bottom: 2rem;
+}
+
+.table {
+  color: #fff !important;
+}
+
+
+/* Game List Page */
 .student-name{
   color: grey;
 }
